[feat] extract heading

--- a/src/posts/블로그개발/parsing.mdx
+++ b/src/posts/블로그개발/parsing.mdx
@@ -1,10 +1,28 @@
 ---
-title: "mdx파일 파싱하기"
+title: 'mdx파일 파싱하기'
 date: 2024-12-05
 desc: 나만의 블로그 제작기 - 게시물 파싱하기
-image: "/images/tmp2.jpg"
+image: '/images/tmp2.jpg'
 ---
 
-### 목표
+# 제목1
 
-아멀ㄴ이ㅏ러
+ㅇㅇ
+
+## 제목2
+
+ㅇㅇ
+
+### 제목3
+
+ㅇㅇ
+
+## 제목22
+
+ㅇㅇ
+
+### 제목32
+
+ㅇㅇ
+
+# 제목1
