[post] update scope post

--- a/src/posts/JS&TS/scope.mdx
+++ b/src/posts/JS&TS/scope.mdx
@@ -22,19 +22,47 @@ console.log(x); // ?
 ```
 
 위 예제에서 코드의 가장 바깥 영역과 foo 함수 내부에 같은 이름을 가지는 x 변수를 선언했고, 함수 내부와 코드 가장 바깥에서 x 변수를 참조한다.
-이때 자바스크립트 엔진은 이름이 같은 두 변수 중 어떤 변수를 참조해야할 것인지를 결정하는데, 이를 **식별자 결정**이라고 한다. 자바스크립트 엔진은 스코프를 통해 어떤 변수를 참조할 것인지 결정한다.
+이때 자바스크립트 엔진은 이름이 같은 두 변수 중 어떤 변수를 참조해야할 것인지를 결정하는데, 이를 **식별자 결정**이라고 한다. 자바스크립트 엔진은 **스코프**를 통해 어떤 변수를 참조할 것인지 결정한다.
 
 위 예제에서 코드의 가장 바깥 영역에 선언된 x 변수는 어디에서든 참조할 수 있지만, foo 함수 내부에서 선언된 x 변수는 함수 내부에서만 사용할수 있다.
-즉 두 x 변수는 식별자 이름이 동일하지만 스코프가 다른 별개의 변수이다.
+즉, 두 x 변수는 식별자 이름이 동일하지만 스코프가 다른 별개의 변수이다.
 
 만약 스코프라는 개념이 없다면 같은 이름을 갖는 변수는 프로그램 전체에서 하나밖에 사용할 수 없을 것이다.
 프로그래밍 언어에서는 스코프를 통해 식별자인 변수 이름의 충돌을 방지하여 같은 이름의 변수를 사용할 수 있게 한다.
-스코프 내에서 식별자는 유일해야 하지만 다른 스포크에는 같은 이름의 식별자를 사용할 수 있다.
+스코프 내에서 식별자는 유일해야 하지만 다른 스코프에는 같은 이름의 식별자를 사용할 수 있다.
 
 ## 스코프의 종류
 
 변수는 자신이 선언된 위치(전역 또는 지역)에 의해 스코프가 결정된다.
 전역에서 선언된 변수는 전역 스코프를 갖는 전역 변수, 지역에서 선언된 변수는 지역 스코프를 갖는 지역 변수이다.
+
+```tsx
+var x = "global x";
+var y = "global y";
+
+function outer() {
+	var z = "outer's local z";
+
+	console.log(x); //global x
+	console.log(y); //global y
+	console.log(z); //outer's local z
+
+	function inner() {
+		var x = inner's local x;
+
+		console.log(x); //1️⃣ inner's local x
+		console.log(y); //2️⃣ global y
+		console.log(z); //outer's local z
+	}
+
+	inner();
+}
+
+outer();
+
+console.log(x); //global x
+console.log(z); //ReferenceError: z is not defined
+```
 
 ### 전역과 전역 스코프
 
@@ -52,14 +80,17 @@ console.log(x); // ?
 스코프는 함수의 중첩에 의해 계층적 구조를 갖는다. 중첩 함수의 지역 스코프는 중첩 함수를 포함하는 외부 함수의 지역 스코프와 계층적 구조를 갖는다. 이때 외부 함수의 지역 스코프를 중첩 함수의 상위 스코프라 한다.
 위 예제에서 나타나는 스코프체인을 그림으로 나타내면 아래와 같다.
 
-모든 스코프는 하나읙 계층적 구조로 연결되며, 모든 지역 스코프의 최상위 스코프는 전역 스코프이다.
-이렇게 스코프가 계층적으로 연결된 것을 스코프 체인 이라고 한다. 위 그림에서의 스코프 체인은 최상위 스코프인 전역 스코프, 전역에서 선언된 outer 함수의 지역 스코프, outer 함수 내부에서 선언된 inner 함수의 지역스코프로 이루어진다.
+![scope_chain](/images/posts/JS&TS/scope.png)
 
-변수를 참조할 때 자바스크립트 엔진은 **스코프 체인을 통해 변수를 참조하는 코드의 스코프에서 시작하여 상위 스코프 방향으로 이동하며** 선언된 변수를 검색한다. 이를 통해 상위 스코프에서 선언한 변수를 하위 스코프에서도 참조할 수 있다.
+모든 스코프는 하나의 계층적 구조로 연결되며, 모든 지역 스코프의 최상위 스코프는 전역 스코프이다.
+이렇게 스코프가 계층적으로 연결된 것을 스코프 체인 이라고 한다. 위 그림에서의 스코프 체인은 최상위 스코프인 전역 스코프, 전역에서 선언된 outer 함수의 지역 스코프, outer 함수 내부에서 선언된 inner 함수의 지역 스코프로 이루어진다.
 
-위 예제의 4, 5를 살펴보자.
-4의 경우 x 변수를 참조하는 코드의 스코프인 inner 함수의 지역 스코프에서 x 변수가 선언되었는지 검색한다. 존재하므로 검색된 변수를 참조하고 검색을 종료한다.
-5의 경우 y 변수를 참조하는 코드의 스코프인 inner 함수의 지역 스코프에서 y 변수가 선언되었는지 검색한다. 존재하지 않으므로 상위 스코프인 outer 함수의 지역 스코프로 이동하는데, outer 함수 내에서도 y 변수의 선언이 존재하지 않으므로 또 다시 상위 스코프인 전역 스코프로 이동한다. 전역 스코프에는 y 변수의 선언이 존재하므로 검색된 변수를 참조하고 검색을 종료한다.
+변수를 참조할 때 자바스크립트 엔진은 **스코프 체인을 통해 변수를 참조하는 코드의 스코프에서 시작하여 상위 스코프 방향으로 이동하며** 선언된 변수를 검색한다. 이를 통해 상위 스코프에서 선언한 변수를 하위 스코프에서도 참조할 수
+있다.
+
+위 예제의 1️⃣, 2️⃣를 살펴보자.
+1️⃣의 경우 x 변수를 참조하는 코드의 스코프인 inner 함수의 지역 스코프에서 x 변수가 선언되었는지 검색한다. 존재하므로 검색된 변수를 참조하고 검색을 종료한다.
+2️⃣의 경우 y 변수를 참조하는 코드의 스코프인 inner 함수의 지역 스코프에서 y 변수가 선언되었는지 검색한다. 존재하지 않으므로 상위 스코프인 outer 함수의 지역 스코프로 이동하는데, outer 함수 내에서도 y 변수의 선언이 존재하지 않으므로 또 다시 상위 스코프인 전역 스코프로 이동한다. 전역 스코프에는 y 변수의 선언이 존재하므로 검색된 변수를 참조하고 검색을 종료한다.
 
 이처럼 스코프 체인을 따라 변수를 참조하는 코드의 스코프에서 시작해 상위 스코프 방향으로 이동하며 선언된 변수를 검색한다. 상위 스코프에서 유효한 변수는 하위 스코프에서 자유롭게 참조할 수 있지만, 하위 스코프에서 유효한 변수를 상위 스코프에서 참조할 수는 없다.
 
@@ -69,8 +100,8 @@ console.log(x); // ?
 
 ## 함수 레벨 스코프
 
-**var 키워드로 선언된 변수는 오로지 함수의 코드 블록만을 지역스코프로 인정한다.** 이러한 특성을 함수 레벨 스코프라한다.
-(블록 레벨 스코프란 함수 몸체만이 아니라 모든 코드 블록(if, for, while, try/catch)이 지역 스코프를 만든다.)
+**var 키워드로 선언된 변수는 오로지 함수의 코드 블록만을 지역 스코프로 인정한다.** 이러한 특성을 **함수 레벨 스코프**라한다.
+(블록 레벨 스코프의 경우 함수 몸체만이 아니라 모든 코드 블록(if, for, while, try/catch)이 지역 스코프를 만든다.)
 
 ```tsx
 var x = 1;
