--- a/src/posts/JS&TS/scope.mdx
+++ b/src/posts/JS&TS/scope.mdx
@@ -85,8 +85,7 @@ console.log(z); //ReferenceError: z is not defined
 모든 스코프는 하나의 계층적 구조로 연결되며, 모든 지역 스코프의 최상위 스코프는 전역 스코프이다.
 이렇게 스코프가 계층적으로 연결된 것을 스코프 체인 이라고 한다. 위 그림에서의 스코프 체인은 최상위 스코프인 전역 스코프, 전역에서 선언된 outer 함수의 지역 스코프, outer 함수 내부에서 선언된 inner 함수의 지역 스코프로 이루어진다.
 
-변수를 참조할 때 자바스크립트 엔진은 **스코프 체인을 통해 변수를 참조하는 코드의 스코프에서 시작하여 상위 스코프 방향으로 이동하며** 선언된 변수를 검색한다. 이를 통해 상위 스코프에서 선언한 변수를 하위 스코프에서도 참조할 수
-있다.
+변수를 참조할 때 자바스크립트 엔진은 **스코프 체인을 통해 변수를 참조하는 코드의 스코프에서 시작하여 상위 스코프 방향으로 이동하며** 선언된 변수를 검색한다. 이를 통해 상위 스코프에서 선언한 변수를 하위 스코프에서도 참조할 수 있다.
 
 위 예제의 1️⃣, 2️⃣를 살펴보자.
 1️⃣의 경우 x 변수를 참조하는 코드의 스코프인 inner 함수의 지역 스코프에서 x 변수가 선언되었는지 검색한다. 존재하므로 검색된 변수를 참조하고 검색을 종료한다.
@@ -149,8 +148,8 @@ bar();
 
 자바스크립트에서는 **렉시컬 스코프**를 따른다.
 
-자바스크립트에서는 함수를 어디서 정의했는지에 따라 상위 스코프를 결정한다. 함수가 호출된 위치는 어떠한 영향도 주지 않는다.
-이처럼 함수의 상위 스코프는 함수 정의가 실행될 때 정적으로 결정된다. 함수 정의가 실행되어 생성된 함수 객체는 이렇게 결정된 사우이 스코프를 기억한다. 함수가 호출될 때마다 함수의 상위 스코프를 참조할 필요가 있기 때문이다.
+자바스크립트에서는 함수를 어디서 정의했는지에 따라 상위 스코프를 결정한다. 함수가 호출된 위치는 어떠한 영향도 주지 않는다. 이처럼 함수의 상위 스코프는 함수 정의가 실행될 때 정적으로 결정된다.
+함수 정의가 실행되어 생성된 함수 객체는 이렇게 결정된 상위 스코프를 기억한다. 함수가 호출될 때마다 함수의 상위 스코프를 참조할 필요가 있기 때문이다.
 
 위 예제의 bar 함수는 전역에서 정의된 함수로, 전역 변수 x의 값 1을 두 번 출력한다.
 
