[chore] update scope post using showLineNumbers

--- a/src/posts/JS&TS/scope.mdx
+++ b/src/posts/JS&TS/scope.mdx
@@ -36,7 +36,7 @@ console.log(x); // ?
 변수는 자신이 선언된 위치(전역 또는 지역)에 의해 스코프가 결정된다.
 전역에서 선언된 변수는 전역 스코프를 갖는 전역 변수, 지역에서 선언된 변수는 지역 스코프를 갖는 지역 변수이다.
 
-```tsx
+```tsx showLineNumbers
 var x = "global x";
 var y = "global y";
 
@@ -50,8 +50,8 @@ function outer() {
 	function inner() {
 		var x = inner's local x;
 
-		console.log(x); //1️⃣ inner's local x
-		console.log(y); //2️⃣ global y
+		console.log(x); //inner's local x
+		console.log(y); //global y
 		console.log(z); //outer's local z
 	}
 
@@ -87,9 +87,9 @@ console.log(z); //ReferenceError: z is not defined
 
 변수를 참조할 때 자바스크립트 엔진은 **스코프 체인을 통해 변수를 참조하는 코드의 스코프에서 시작하여 상위 스코프 방향으로 이동하며** 선언된 변수를 검색한다. 이를 통해 상위 스코프에서 선언한 변수를 하위 스코프에서도 참조할 수 있다.
 
-위 예제의 1️⃣, 2️⃣를 살펴보자.
-1️⃣의 경우 x 변수를 참조하는 코드의 스코프인 inner 함수의 지역 스코프에서 x 변수가 선언되었는지 검색한다. 존재하므로 검색된 변수를 참조하고 검색을 종료한다.
-2️⃣의 경우 y 변수를 참조하는 코드의 스코프인 inner 함수의 지역 스코프에서 y 변수가 선언되었는지 검색한다. 존재하지 않으므로 상위 스코프인 outer 함수의 지역 스코프로 이동하는데, outer 함수 내에서도 y 변수의 선언이 존재하지 않으므로 또 다시 상위 스코프인 전역 스코프로 이동한다. 전역 스코프에는 y 변수의 선언이 존재하므로 검색된 변수를 참조하고 검색을 종료한다.
+위 예제의 14, 15번줄을 살펴보자.
+14번줄의 경우 x 변수를 참조하는 코드의 스코프인 inner 함수의 지역 스코프에서 x 변수가 선언되었는지 검색한다. 존재하므로 검색된 변수를 참조하고 검색을 종료한다.
+15번줄의 경우 y 변수를 참조하는 코드의 스코프인 inner 함수의 지역 스코프에서 y 변수가 선언되었는지 검색한다. 존재하지 않으므로 상위 스코프인 outer 함수의 지역 스코프로 이동하는데, outer 함수 내에서도 y 변수의 선언이 존재하지 않으므로 또 다시 상위 스코프인 전역 스코프로 이동한다. 전역 스코프에는 y 변수의 선언이 존재하므로 검색된 변수를 참조하고 검색을 종료한다.
 
 이처럼 스코프 체인을 따라 변수를 참조하는 코드의 스코프에서 시작해 상위 스코프 방향으로 이동하며 선언된 변수를 검색한다. 상위 스코프에서 유효한 변수는 하위 스코프에서 자유롭게 참조할 수 있지만, 하위 스코프에서 유효한 변수를 상위 스코프에서 참조할 수는 없다.
 
