[chore] add cover to metadata for book category

--- a/src/posts/DeepDive/this_binding.mdx
+++ b/src/posts/DeepDive/this_binding.mdx
@@ -2,6 +2,7 @@
 title: 'this binding'
 date: 2024-12-24
 desc: 자바스크립트의 this와 this 바인딩을 이해해보자
+cover: '/images/posts/DeepDive/modern-js.jpg'
 ---
 
 ### this와 this 바인딩
