[post] promise_example post

--- a/src/posts/JavaScript-DeepDive/promise.mdx
+++ b/src/posts/JavaScript-DeepDive/promise.mdx
@@ -1,7 +1,7 @@
 ---
 title: '프로미스'
 date: 2025-04-09
-desc:
+desc: 자바스크립트의 프로미스에 대해 알아보자
 cover: '/images/posts/JavaScript-DeepDive/modern-js.jpg'
 ---
 
