[chore] remove <InlineCode>

--- a/src/posts/algorithm/1036.mdx
+++ b/src/posts/algorithm/1036.mdx
@@ -64,9 +64,9 @@ for (int i = 0; i < n; i++) {
 36 x 50 크기의 벡터를 만들어서 각 자리수마다 해당 문자가 나온 횟수를 더해준다.
 
 만약 ABC라는 문자가 있다면<br/>
-A를 36진법으로 나타내면 10 → <InlineCode>w[10][47] += 1;</InlineCode> (50자리 중에서 뒤에서 3번째)<br/>
-B를 36진법으로 나타내면 11 → <InlineCode>w[11][48] += 1;</InlineCode> (50자리 중에서 뒤에서 2번째)<br/>
-C를 36진법으로 나타내면 12 → <InlineCode>w[12][49] += 1;</InlineCode> (50자리 중에서 뒤에서 1번째)<br/>
+A를 36진법으로 나타내면 10 → `w[10][47] += 1;` (50자리 중에서 뒤에서 3번째)<br/>
+B를 36진법으로 나타내면 11 → `w[11][48] += 1;` (50자리 중에서 뒤에서 2번째)<br/>
+C를 36진법으로 나타내면 12 → `w[12][49] += 1;` (50자리 중에서 뒤에서 1번째)<br/>
 
 위처럼 더해준다.
 
@@ -85,7 +85,7 @@ for (int i = 0; i < n; i++) {
 ```
 
 이걸 다 만들고 나서 Z와의 차이를 곱해준다.<br/>
-Z가 35니까 <InlineCode>35-i</InlineCode>로 계산 !
+Z가 35니까 `35-i`로 계산 !
 
 ```cpp
 for (int i = 0; i < 35; i++) {
