--- a/src/posts/algorithm/bitmask.mdx
+++ b/src/posts/algorithm/bitmask.mdx
@@ -68,7 +68,7 @@ flag ^= (1 << 0);  // 00000011 → 00000010
 
 두 자연수 X와 K가 주어진다. 그러면, 다음 식을 만족하는 K번째로 작은 자연수 Y를 찾아야 한다.
 
-<InlineCode>X + Y = X | Y</InlineCode>
+`X + Y = X | Y`
 
 | 는 비트 연산 OR이다.
 
@@ -97,9 +97,9 @@ x에서 비트가 0인 자리는 y에서 0 또는 1로 채워야 한다.
 💡 **구현**
 
 x는 2,000,000,000보다 작거나 같은 자연수이다. 2^64 = 21억~ 이므로 x의 0부터 64번째 비트까지 반복한다.<br/>
-위에서 살펴본 자주 쓰는 패턴 <InlineCode>x & (1LL \<\< i)</InlineCode> 을 사용해 x의 특정 비트가 1인지 검사한다. 여기서 1LL은 1의 long long int 버전이다.
+위에서 살펴본 자주 쓰는 패턴 `x & (1LL \<\< i)` 을 사용해 x의 특정 비트가 1인지 검사한다. 여기서 1LL은 1의 long long int 버전이다.
 
-<InlineCode>y |= (1LL \<\< i)</InlineCode>는 y의 i번째 비트 값을 1로 설정하는 패턴이다.
+`y |= (1LL \<\< i)`는 y의 i번째 비트 값을 1로 설정하는 패턴이다.
 
 ```cpp
 for(int i=0; i<65; i++){
@@ -183,7 +183,7 @@ int main() {
 모든 거주민의 i번째 비트를 검사하는 방식으로 반복한다.
 i번째 비트가 1인 거주민 수를 count라 하면, 0인 거주민 수는 n-count가 된다. 그럼 i번째 비트가 다른 거주민 쌍의 수는 count \* (n-count)가 된다.
 
-해당 비트의 가중치는 2^i이고, 이는 <InlineCode>1ll \<\< i</InlineCode> 와 같다. (한 비트를 왼쪽으로 이동하면 2를 곱하는것과 같은 효과이기 때문에 !)
+해당 비트의 가중치는 2^i이고, 이는 `1ll \<\< i` 와 같다. (한 비트를 왼쪽으로 이동하면 2를 곱하는것과 같은 효과이기 때문에 !)
 
 즉, 비트가 다른 거주민 쌍의 수에 해당 자리의 가중치를 곱해 누적하는 방식이다.
 
