--- a/src/posts/JS-TS/promise_example.mdx
+++ b/src/posts/JS-TS/promise_example.mdx
@@ -43,7 +43,7 @@ Promise의 후속 처리 함수는 마이크로태스크 큐에 등록<br/>
 
 1. 동기 코드 먼저 실행(콜 스택)
 
-   <InlineCode>console.log('9')</InlineCode> 실행 →<Highlighter>9</Highlighter>
+   `console.log('9')` 실행 →<Highlighter>9</Highlighter>
    출력
 
 2. 콜 스택 비었으니 마이크로태스크 큐 확인 -> 마이크로태스크 큐에서 대기 중인 콜백을 콜 스택에 푸시해 실행
@@ -57,12 +57,11 @@ Promise의 후속 처리 함수는 마이크로태스크 큐에 등록<br/>
    };
    ```
 
-   <Highlighter>5</Highlighter> 출력 →
-   <InlineCode>() => console.log(’6’)</InlineCode> 콜백 함수 타이머 등록 후
-   태스크 큐 등록 → <InlineCode>() => console.log('7')</InlineCode>
-   마이크로태스크 큐 등록 → <Highlighter>8</Highlighter> 출력
+   <Highlighter>5</Highlighter> 출력 → `() => console.log(’6’)` 콜백 함수 타이머
+   등록 후 태스크 큐 등록 → `() => console.log('7')` 마이크로태스크 큐 등록 →
+   <Highlighter>8</Highlighter> 출력
 
-3. 마이크로태스크 큐의 <InlineCode>console.log('7')</InlineCode> 실행 → <Highlighter>7</Highlighter> 출력
+3. 마이크로태스크 큐의 `console.log('7')` 실행 → <Highlighter>7</Highlighter> 출력
 4. 마이크로태스크 큐 확인 → 비었으니 태스크 큐 확인 -> 태스크 큐에서 대기 중인 콜백을 콜 스택에 푸시해 실행
 
    ```jsx
@@ -76,11 +75,10 @@ Promise의 후속 처리 함수는 마이크로태스크 큐에 등록<br/>
    };
    ```
 
-   <Highlighter>1</Highlighter> 출력 →
-   <InlineCode>() => console.log(’2’)</InlineCode> 타이머 등록 후 태스크 큐 등록
-   → <InlineCode>() => console.log(’3’)</InlineCode> 마이크로태스크 큐 등록 →
+   <Highlighter>1</Highlighter> 출력 → `() => console.log(’2’)` 타이머 등록 후
+   태스크 큐 등록 → `() => console.log(’3’)` 마이크로태스크 큐 등록 →
    <Highlighter>4</Highlighter> 출력
 
-5. 마이크로태스크 큐의 <InlineCode>console.log('3')</InlineCode> 실행 → <Highlighter>3</Highlighter> 출력
-6. 태스크 큐의 <InlineCode>console.log('6')</InlineCode> 실행 → <Highlighter>6</Highlighter> 출력
-7. 태스크 큐의 <InlineCode>console.log('2')</InlineCode> 실행 → <Highlighter>2</Highlighter> 출력
+5. 마이크로태스크 큐의 `console.log('3')` 실행 → <Highlighter>3</Highlighter> 출력
+6. 태스크 큐의 `console.log('6')` 실행 → <Highlighter>6</Highlighter> 출력
+7. 태스크 큐의 `console.log('2')` 실행 → <Highlighter>2</Highlighter> 출력
