--- a/src/posts/JavaScript-DeepDive/promise.mdx
+++ b/src/posts/JavaScript-DeepDive/promise.mdx
@@ -86,7 +86,7 @@ get('https://jsonplaceholder.typicode.com/posts/1');
 console.log(todos); //undefined
 ```
 
-xhr.onload 이벤트 핸들러 프로퍼티에 바인딩한 이벤트 핸들러는 언제나 <InlineCode>console.log(todos)</InlineCode>가 종료한 이후에 호출된다. 따라서 todos를 출력하는 시점에는 아직 todos 변수에 서버의 응답 결과가 할당되기 이전이다.
+xhr.onload 이벤트 핸들러 프로퍼티에 바인딩한 이벤트 핸들러는 언제나 `console.log(todos)`가 종료한 이후에 호출된다. 따라서 todos를 출력하는 시점에는 아직 todos 변수에 서버의 응답 결과가 할당되기 이전이다.
 
 get 함수가 호출되면 get 함수의 실행 컨텍스트가 생성되고 콜 스택에 푸시된다. xhr.load 이벤트 핸들러가 바인딩되고 get 함수는 종료되며 콜 스택에서 팝된다. 이후 바로 console.log가 호출되어 콜 스택에 푸시된다. 서버로부터 응답이 도착하면 xhr 객체에서 load 이벤트가 발생한다. xhr.onload 이벤트 핸들러는 load 이벤트가 발생하면 일단 태스크 큐에 저장되어 대기하다가, <Wavy>콜 스택이 비면</Wavy> 이벤트 루프에 의해 콜 스택으로 푸시되어 실행된다.
 
@@ -202,8 +202,8 @@ new Promise((_, reject) => reject(new Error('rejected'))).catch((e) =>
 );
 ```
 
-<InlineCode>.catch(e => console.log(e));</InlineCode> 는
-<InlineCode>.then(undefined, e => console.log(e));</InlineCode>와 동일하게
+`.catch(e => console.log(e));` 는
+`.then(undefined, e => console.log(e));`와 동일하게
 동작한다. 또한 catch 메서드도 then 메서드와 마찬가지로 언제나 프로미스를
 반환한다.
 
