[chore] add reference

--- a/src/posts/JS-TS/commonjs-vs-esm.mdx
+++ b/src/posts/JS-TS/commonjs-vs-esm.mdx
@@ -169,3 +169,10 @@ ES모듈 구문은 CommonJS로 평가될때 에러가 나는 구문으로 정의
 - `import.meta` 참조
 - 모듈 최상단의 `await`
 - CommonJS 래퍼 변수(`require`, `module`, `exports`, `__dirname`, `__filename`)의 렉시컬 재정의 (렉시컬 재정의 => let이나 const로 다시 선언(var 제외))
+
+<br />
+**참고자료**
+
+https://nodejs.org/api/packages.html#determining-module-system<br/>
+https://tech.kakao.com/posts/605<br/>
+https://toss.tech/article/commonjs-esm-exports-field
