--- a/src/posts/JavaScript-DeepDive/promise.mdx
+++ b/src/posts/JavaScript-DeepDive/promise.mdx
@@ -402,3 +402,8 @@ Promise.resolve()
 프로미스의 후속 처리 메서드의 콜백함수는 태스크 큐가 아닌 **마이크로태스크 큐**(microtask queue)에 저장되기 때문이다.
 
 마이크로태스크 큐는 태스크 큐보다 우선순위가 높다. 이벤트 루프는 콜 스택이 비면 먼저 마이크로태스크 큐에서 대기하고 있는 함수를 가져와 실행하고, 이후 마이크로태스크 큐가 비면 태스크 큐에서 대기하고 있는 함수를 가져와 실행한다.
+
+<br />
+**참고자료**
+
+모던 자바스크립트 Deep Dive 45장 프로미스 참조
