[chore] add book cover

--- a/src/posts/React-DeepDive/core-web-vital.mdx
+++ b/src/posts/React-DeepDive/core-web-vital.mdx
@@ -2,6 +2,7 @@
 title: '웹 성능 지표'
 date: '2025-04-23'
 desc: 'Core Web Vital과 웹 성능 개선 방안 알아보기'
+cover: '/images/posts/React-DeepDive/modern-react.jpg'
 ---
 
 ## 웹 사이트와 성능
